# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "opentitanlib",
    "opentitantool",
    "rom_ext_image_tools/signer",
    "rom_ext_image_tools/signer/image",
]

[workspace.metadata.raze]
workspace_path = "//third_party/cargo"
experimental_api = true
render_package_aliases = false
targets = [
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"

