# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

# Setup configuration file for the dvsim python package

[metadata]
name = dvsim
description = "dvsim is a command line tool used to run major ASIC toolflows"
version = 0.1
license = Apache License, Version 2.0

[options]
# automatically find all files under dvsim directory and include them
packages = find:
# parse MANIFEST.in file for additional file includes
include_package_data = True
# have pip install any dependencies
install_requires = setuptools
                   hjson
                   tabulate
                   mistletoe @ git+https://github.com/miyuchina/mistletoe
python_requires = >=3

[options.entry_points]
# set up an executable script that calls dvsim:main()
console_scripts = dvsim=dvsim:main
