# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "opentitan-dv"
version = "0.1.0"
description = "OpenTitan DV system"
authors = ["lowRISC contributors (OpenTitan project)"]
readme = "README.md"
licence = "Apache-2.0"
packages = [
    {include = "ot"},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
mypy = "^1.11"
ruff = "^0.5"

[tool.poetry.scripts]
otdv = "ot.dv.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "F", "I", "B", "W", "N", "SIM", "PTH", "C4", "A", "RUF", "PERF"]
extend-select = ["W391"]
