[project]
name = "opentitanlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
rom_chip_info = "opentitanlib.scripts.rom_chip_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentitanlib"]
