# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "testplantool"
version = "0.1.0"
description = "A tool to manipulate and extract information from the testplans."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
